--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
